replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sellerportal-consignment
spec:
  replicas: 1
