service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sellerportal-consignment
spec:
  type: ClusterIP
  selector:
    app: sellerportal-consignment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
