ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sellerportal-consignment
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # ACM cert ARN is overridden in each overlay
    alb.ingress.kubernetes.io/certificate-arn: PLACEHOLDER
spec:
  rules:
    - host: PLACEHOLDER_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sellerportal-consignment
                port:
                  number: 80
